# Jessica

./: README.md  gui.py  main.py  pyproject.toml  requirements.txt
Chatbot/: build_llm.py  llm_memory.py  qa.py  run_cli.py
SpeechRecog/: speech_to_text.py  text_to_speech.py
