[project]
name = "isabella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "edge-tts>=7.2.3",
    "gtts>=2.5.4",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.2",
    "python-dotenv>=1.1.1",
    "python-vlc>=3.0.21203",
    "pyttsx3>=2.99",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
]
